--- a/partials/practic.html
+++ b/partials/practic.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="div__tasks">
-            <a href="../labs/LB1/Lab1.html"  class="prTask" target="_blank">
+            <a href="../labs/lb1/lab1.html"  class="prTask" target="_blank">
                 Практична №3
             </a>
         </div>
