--- a/labs/lb1/lab1.css
+++ b/labs/lb1/lab1.css
@@ -8,7 +8,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
+  height: 100vh;
+  margin:  0;
 }
 
 form {
